fixed the overflowing hero section element by hiding the scrollbars

--- a/QA resource/theme/itsolution/css/style.css
+++ b/QA resource/theme/itsolution/css/style.css
@@ -2487,6 +2487,10 @@ h5,
   color: #000000;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .hero-wrap {
   width: 100%;
   height: 100%;
